Re-organize the `releasenotes` directory into `changelog` (#12566)
* Move all release related documents to ./release and add tool to generate READMEs

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* Addition of the release.go file

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* simplify release.go

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* generate the release notes in the proper place

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* modify previous mentions of docs/releasenotes

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* re-add v17.0.0 summary

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* add new release tool to release instruction and ci

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* apply review suggestions

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* simplify release notes document path

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

* Apply review suggestions and fix team files

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

---------

Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>