@@ -55,7 +55,7 @@ Pre-release versions should be labeled with a suffix like `-beta2` or `-rc1`.
 ## Release Branches
 
 Each major and minor releases (X.Y) should have a [release branch](https://github.com/vitessio/vitess/branches/all?query=release) named
-`release-X.Y`. This branch should diverge from `main` when the code freeze when the release
+`release-X.Y`. This branch should diverge from `main` when the release
 is declared, after which point only bugfix PRs should be cherry-picked onto the branch.
 All other activity on `main` will go out with a subsequent major or minor release.
 
@@ -109,6 +109,7 @@ Therefore, file a JIRA ticket with Sonatype to get added ([example for a differe
 Follow [Sonatype's GPG instructions](https://central.sonatype.org/pages/working-with-pgp-signatures.html).
 
 Install `gpg-agent` (needed below) e.g. on Ubuntu via: `sudo apt-get install gnupg-agent`.
+for Mac you need to install 'gnupg' via 'brew install gnupg'
 
 #### Login configuration
 
@@ -118,7 +119,7 @@ Create the `settings.xml` in the `$HOME/.m2/` directory as described in their [i
 
 ## Release Cutover 
 
-In this section we describe our current release process. We begin with a list of [**pre-requisites for the release team**](#pre-requisites) and with a short [**overview**](#overview).
+In this section we describe our current release process. We begin with a list of [**pre-requisite for the release team**](#pre-requisites) and with a short [**overview**](#overview).
 The release process is divided into three parts: [**Pre-Release**](#pre-release), [**Release**](#release), [**Post-Release**](#post-release), which are detailed after the overview.
 
 ### Pre-Requisites
@@ -139,7 +140,8 @@ We usually create the RC1 during the first week of the month, and the GA version
 #### Code Freeze
 
 Before creating RC1, there is a code freeze. Assuming the release of RC1 happens on a Tuesday, the release branch will be frozen Friday of the previous week.
-This allows us to test that the release branch can be released and avoid discovering unwanted events during the release day. Once the RC1 is released, there are three more weeks to backport bug fixes into the release branches. However, we also proceed to a code freeze the Friday before the GA release. (Assuming GA is on a Tuesday)
+This allows us to test that the release branch can be released and avoid discovering unwanted events during the release day. Once the RC1 is released, there are three more weeks to backport bug fixes into the release branches.
+However, we also proceed to a code freeze the Friday before the GA release. (Assuming GA is on a Tuesday)
 Regarding patch releases, no code freeze is planned.
 
 #### Tracking Issue for each Release
@@ -159,8 +161,9 @@ That includes:
   > - This includes write access to the Vitess repository and to the Maven repository. 
 - **Preparing and cleaning the release notes summary.**
   > - One or more Pull Requests have to be submitted in advance to create and update the release summary.
-  > - The summary files are located in: `./doc/releasenotes/*_*_*_summary.md`.
+  > - The summary files are located in: `./changelog/*.0/*.*.*/summary.md`.
   > - The summary file for a release candidate is the same as the one for the GA release.
+  > - Make sure to run `go run ./go/tools/releases/releases.go` to update the `changelog` directory with the latest release notes.
 - **Finishing the blog post, and coordinating with the different organizations for cross-posting. Usually CNCF and PlanetScale. This step applies only for GA releases.**
   > - The blog post must be finished and reviewed.
   > - A Pull Request on the website repository of Vitess has to be created so we can easily publish the blog during the release day.
@@ -168,17 +171,29 @@ That includes:
   > - As soon as we go into code freeze, if we are doing an RC, create the release branch.
   > - If we are doing a GA release, do not merge any new Pull Requests.
   > - The guide on how to do a code freeze is available in the [How To Code Freeze](#how-to-code-freeze) section.
+  > - It is not advised to merge a PR during code freeze, but if it is deemed necessary by the release lead, then follow the steps in [How To Merge During Code Freeze](#how-to-merge-during-code-freeze) section.
+- **Create the Vitess release.**
+  > - A guide on how to create a Vitess release is available in the [How to prepare the release of Vitess](#how-to-prepare-the-release-of-vitess) section.
+  > - This step will create a Release Pull Request, it must be reviewed and merged before the release day. The release commit will be used to tag the release.
 - **Preparing the Vitess Operator release.**
   > - While the Vitess Operator is located in a different repository, we also need to do a release for it.
   > - The Operator follows the same cycle: RC1 -> GA -> Patches.
   > - Documentation for the pre-release of the Vitess Operator is available [here](https://github.com/planetscale/vitess-operator/blob/main/docs/release-process.md#prepare-for-release).
+- **Update the release notes on `main`.**
+  > - One Pull Request against `main` must be created, it will contain the new release notes that we are adding in the Release Pull Request.
+  > - We open this Pull Request now to avoid waiting on the CI during release day.
+  > - All future changes to the release notes during the code freeze will need to be ported to both PRs: the one on `main` and the Release Pull Request.
 
 ### Release
 
 On the release day, there are several things to do:
 
-- **Create the Vitess release.**
-  > - A guide on how to create a Vitess release is available in the [How To Release Vitess](#how-to-release-vitess) section.
+- **Merge the Release Pull Request.**
+  > - During the code freeze, we created a Release Pull Request. It must be merged.
+- **Tag the Vitess release.**
+  > - A guide on how to tag a version is available in the [How To Release Vitess](#how-to-release-vitess) section.
+- **Update the release notes on `main`.**
+  > - During the code freeze, we created a Pull Request against `main` to update the release notes. It must be merged.
 - **Create the corresponding Vitess operator release.**
   > - Applies only to versions greater or equal to `v14.0.0`.
   > - If we are doing an RC release, then we will need to create the Vitess Operator RC too. If we are doing a GA release, we're also doing a GA release in the Operator.
@@ -200,16 +215,68 @@ On the release day, there are several things to do:
   > - After a while, those elements will finish their execution and their status will be green.
   > - This step is even more important for GA releases as we often include a link to _arewefastyet_ in the blog post.
   > - The benchmarks need to complete before announcing the blog posts or before they get cross-posted.
-- **Update the release notes on the release branch and on `main`.**
-  > - Two new Pull Requests have to be created.
-  > - One against `main`, it will contain only the new release notes.
-  > - And another against the release branch, this one contains the release notes and the release commit. (The commit on which we did `git tag`) 
+- **Go back to dev mode on the release branch.**
+  > - The version constants across the codebase must be updated to `SNAPSHOT`. 
+- **Build k8s Docker images and publish them**
+  > - The docker image for `base`, `lite`, etc are built automatically by DockerHub. The k8s images however are dependent on these images and are required to be built manually.
+  > - These images should be built after the `base` image has been built and available on DockerHub.
+  > - To build and publish these images, run `./release.sh` from the directory `vitess/docker`.
 
 ### Post-Release
 
 Once the release is over, we need to announce it on both Slack and Twitter. We also want to make sure the blog post was cross-posted, if applicable.
 We need to verify that _arewefastyet_ has finished the benchmark too.
 
+### How to prepare the release of Vitess
+
+> In this example our current version is `v14.0.3` and we release the version `v15.0.0`.
+> Alongside Vitess' release, we also release a new version of the operator.
+> Since we are releasing a release candidate here, the new version of the operator will also be a release candidate.
+> In this example, the new operator version is `2.8.0`.
+>
+> It is important to note that before the RC, there is a code freeze during which we create the release branch.
+>
+> The release branch in this example is `release-15.0`.
+>
+> The example also assumes that `origin` is the `vitessio/vitess` remote.
+
+1. Fetch `github.com/vitessio/vitess`'s remote.
+    ```shell
+    git fetch origin
+    ```
+
+2. Creation of the Release Pull Request.
+    > This step will create the Release Pull Request that will then be reviewed ahead of the release day.
+    > The merge commit of that Pull Request will be used during the release day to tag the release.
+    1. Run the `create_release` script using the Makefile:
+        1. Release Candidate:
+            ```shell
+            make BASE_BRANCH="release-15.0" BASE_REMOTE="origin" RELEASE_VERSION="15.0.0-rc1" VTOP_VERSION="2.8.0-rc1" create_release
+            ```
+        2. General Availability:
+           ```shell
+           make BASE_BRANCH="release-15.0" BASE_REMOTE="origin" RELEASE_VERSION="15.0.0" VTOP_VERSION="2.8.0" create_release
+           ```
+
+       The script will prompt you `Pausing so release notes can be added. Press enter to continue`. We are now going to generate the release notes, continue to the next sub-step.
+
+    2. Run the following command to generate the release notes:
+        1. Release Candidate:
+            ```shell
+            make VERSION="v15.0.0-rc1" FROM="v14.0.3" TO="HEAD" SUMMARY="./changelog/15.0/15.0.0/summary.md" release-notes  
+            ```
+        2. General Availability:
+            ```shell
+            make VERSION="v15.0.0-rc1" FROM="v14.0.3" TO="HEAD" SUMMARY="./changelog/15.0/15.0.0/summary.md" release-notes  
+            ```
+       This command will generate the release notes by looking at all the commits between the tag `v14.0.3` and the reference `HEAD`.
+       It will also use the file located in `./changelog/15.0/15.0.0/summary.md` to prefix the release notes with a text that the maintainers wrote before the release.
+       Please verify the generated release notes to make sure it is well-formatted and all the bookmarks are generated properly.
+
+
+3. Follow the instruction prompted by the `create_release` Makefile command's output in order to push the newly created branch and create the Release Pull Request on GitHub.
+
+4. If we are doing an RC release it means we created a new branch from `main`. We need to update `main` with the next SNAPSHOT version. If `main` was on `15.0.0-SNAPSHOT`, we need to update it to `16.0.0-SNAPSHOT`. A simple find and replace in the IDE is sufficient, there only a handful of files that must be changed: `version.go` and several java files.
 
 ### How To Release Vitess
 This section is divided into two parts:
@@ -218,7 +285,10 @@ This section is divided into two parts:
 
 #### Creation of the tags and release notes
 
-> In this example our current version is `v14` and we release the version `v15.0.0`.
+> This step implies that you have created a [Release Pull Request](#how-to-prepare-the-release-of-vitess) beforehand and that it has been reviewed.
+> The merge commit of this Release Pull Request will be used to tag the release.
+> 
+> In this example our current version is `v14.0.3` and we release the version `v15.0.0`.
 > Alongside Vitess' release, we also release a new version of the operator.
 > Since we are releasing a release candidate here, the new version of the operator will also be a release candidate.
 > In this example, the new operator version is `2.8.0`.
@@ -234,37 +304,22 @@ This section is divided into two parts:
     git fetch origin
     ```
 
-2. Creation of the release notes and tags.
-   1. Run the release script using the Makefile:
-      1. Release Candidate:
-          ```shell
-          make BASE_BRANCH="release-15.0" BASE_REMOTE="origin" RELEASE_VERSION="15.0.0-rc1" DEV_VERSION="15.0.0-SNAPSHOT" VTOP_VERSION="2.8.0-rc1" do_release
-          ```
-      2. General Availability:
-         ```shell
-         make BASE_BRANCH="release-15.0" BASE_REMOTE="origin" RELEASE_VERSION="15.0.0" DEV_VERSION="15.0.1-SNAPSHOT" VTOP_VERSION="2.8.0" do_release
-         ```
+2. Checkout to the merge commit of the Release Pull Request.
 
-      The script will prompt you `Pausing so release notes can be added. Press enter to continue`. We are now going to generate the release notes, continue to the next sub-step.
+3. Tag the release and push the tags
+   ```shell
+   git tag v15.0.0 && git tag v0.15.0 && git push origin v15.0.0 && git push origin v0.15.0
+   ```
 
-   2. Run the following command to generate the release notes:
-      1. Release Candidate:
-          ```shell
-          make VERSION="v15.0.0-rc1" FROM="v14.0.0" TO="HEAD" SUMMARY="./doc/releasenotes/15_0_0_summary.md" release-notes  
-          ```
-      2. General Availability:
-          ```shell
-          make VERSION="v15.0.0-rc1" FROM="v14.0.0" TO="HEAD" SUMMARY="./doc/releasenotes/15_0_0_summary.md" release-notes  
-          ```
-      This command will generate the release notes by looking at all the commits between the tag `v14.0.0` and the reference `HEAD`.
-      It will also use the file located in `./doc/releasenotes/15_0_0_summary.md` to prefix the release notes with a text that the maintainers wrote before the release.
+4. Create a Pull Request against the `main` branch with the release notes found in `./changelog/15.0/15.0.0/15_0_0_*.md`.
 
-
-3. Follow the instruction prompted by the `do_release` Makefile command's output in order to push the tags, branches and create the Pull Requests.
-
-4. Create a Pull Request against the `main` branch with the newly created release notes.
-
-5. Release the tag on GitHub UI as explained in the following section.
+5. Run the back to dev mode tool.
+   ```shell
+   make BASE_BRANCH="release-15.0" BASE_REMOTE="origin" RELEASE_VERSION="15.0.0-rc1" DEV_VERSION="15.0.0-SNAPSHOT" back_to_dev_mode
+   ```
+   > You will then need to follow the instructions given by the output of the back_to_dev_mode Makefile command. You will need to push the newly created branch and open a Pull Request.
+   
+6. Release the tag on GitHub UI as explained in the following section.
 
 #### Creating Release or Release Candidate on the GitHub UI
 
@@ -309,6 +364,9 @@ git fetch --all
 git checkout -b release-15.0 origin/main
 ```
 
+> Important: after creating the new branch `release-15.0`, we need to create new branch protection rules on the GitHub UI.
+> The rules can be copied from the rules that are on the `main` branch.
+
 The new branch will be based on `origin/main`, here `origin` points to `vitessio/vitess`. If we are not doing a release candidate, then the branch already exists and we can checkout on it.
 
 Now, if we are doing a GA release, let's update the branch:
@@ -325,6 +383,26 @@ Finally, let's run the code freeze script:
 
 The script will prompt the command that will allow you to push the code freeze change. Once pushed, open a PR that will be merged on `release-15.0`.
 
+Remember, you should also disable the Launchable integration from the newly created release branch.
+
+### How To Merge During Code Freeze
+
+> **Warning:** It is not advised to merge a PR during code-freeze. If it is deemed absolutely necessary, then the following steps can be followed.
+ 
+The PR that needs to be merged will be failing on the `Code Freeze` CI. To merge this PR, we'll have to mark this CI action as not required.
+You will need administrator privileges on the vitess repository to be able to make this change.
+
+1. Go to the GitHub repository and click on `Settings`.
+2. Under the `Code and automation` section, select `Branches`.
+3. Find the branch that you want to merge the PR against and then select `Edit`.
+4. Scroll down to find the list of required checks.
+5. Within this list find `Code Freeze` and click on the cross next to it to remove it from this list.
+6. Save your changes on the bottom of the page.
+7. Refresh the page of the PR, and you should be able to merge it.
+8. After merging the PR, you need to do 2 more things - 
+   1. Add `Code Freeze` back as a required check.
+   2. Check if the release PR has any merge conflicts. If it does, fix them and push.
+
 ### Java Packages: Deploy & Release
 
 > **Warning:** This section's steps need to be executed only when releasing a new major version of Vitess,
@@ -332,12 +410,12 @@ The script will prompt the command that will allow you to push the code freeze c
 > 
 > For this example, we assume we juste released `v12.0.0`.
 
-1.  Checkout to the release commit.
+1. Checkout to the release commit.
     ```shell
     git checkout v12.0.0
     ```
 
-2.  Run `gpg-agent` to avoid that Maven will constantly prompt you for the password of your private key.
+2. Run `gpg-agent` to avoid that Maven will constantly prompt you for the password of your private key. Note that this can print error messages that can be ignored on Mac.
 
     ```bash
     eval $(gpg-agent --daemon --no-grab --write-env-file $HOME/.gpg-agent-info)
@@ -345,11 +423,20 @@ The script will prompt the command that will allow you to push the code freeze c
     export GPG_AGENT_INFO
     ```
 
-3.  Deploy (upload) the Java code to the oss.sonatype.org repository:
+3. Export following to avoid any version conflicts
+    ```bash
+    export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED 
+    --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+    ```
+
+4. Deploy (upload) the Java code to the oss.sonatype.org repository:
 
     > **Warning:** After the deployment, the Java packages will be automatically released. Once released, you cannot delete them. The only option is to upload a newer version (e.g. increment the patch level).</p>
 
     ```bash
+    cd ./java/
     mvn clean deploy -P release -DskipTests
     cd ..
     ```
+
+5. It will take some time for artifacts to appear on [maven directory](https://mvnrepository.com/artifact/io.vitess/vitess-client)
